tests/baselines/reference/classExtendsItself.errors.txt
==== tests/cases/compiler/classExtendsItself.ts (3 errors) ====
    class C extends C { } // error
          ~
!!! error TS2100: Class 'C' is recursively referenced as a base type of itself.
    
    class D<T> extends D<T> { } // error
          ~
!!! error TS2100: Class 'D<T>' is recursively referenced as a base type of itself.
    
    class E<T> extends E<string> { } // error
          ~
!!! error TS2100: Class 'E<T>' is recursively referenced as a base type of itself.